cmake_minimum_required(VERSION 3.20)
project(CodingNinjas)

set(CMAKE_CXX_STANDARD 23)

add_subdirectory("${PROJECT_SOURCE_DIR}/Fundamentals_Easy/Sum_Pair" "${PROJECT_SOURCE_DIR}/Fundamentals_Easy/Sum_Pair/Sum_Pair_Output")
add_subdirectory("${PROJECT_SOURCE_DIR}/Fundamentals_Easy/Sum_Or_Product" "${PROJECT_SOURCE_DIR}/Fundamentals_Easy/Sum_Or_Product/Sum_Or_Product_Output")
